--- a/wapD1.html
+++ b/wapD1.html
@@ -2,8 +2,33 @@
 <html lang="en">
   <head>
     <title>"My Story</title>
+    <style type="text/css">
+      button {
+        background-color: aqua;
+      }
+      input {
+        background-color: blueviolet;
+      }
+      textarea {
+        background-color: chartreuse;
+      }
+      .fieldset-auto-width {
+        display: inline-block;
+        border-color: blue;
+        background-color: yellowgreen;
+      }
+    </style>
   </head>
   <body>
     <h1>Story of my life</h1>
+    <hr />
+    <pre> "hello"</pre>
+    <fieldset class="fieldset-auto-width">
+      <label>Input : </label><br />
+      <input type="text" /><br /><br />
+      <label>Output : </label><br />
+      <textarea type="text"></textarea><br /><br />
+      <button>Click to add</button>
+    </fieldset>
   </body>
 </html>
